--- a/templates/index-layout.tmpl
+++ b/templates/index-layout.tmpl
@@ -41,18 +41,18 @@
 		<div id='nav'>
 			<div class='wrap'>
 				<ul class='menu'>
-					<li class='active'><a href='/'>首页</a></li>
-					<li><a href='/newhouse/'>新房</a></li>
-					<li><a href='javascript:void(0)'>二手房</a></li>
-					<li><a href='/news.html'>资讯</a></li>
-					<li><a href='#'>装修</a></li>
-					<li><i class='icon-thumb'>&nbsp;</i><a href='/groupon.html'>团购</a></li>
+					<li class='hoverable clickable active'><a href='/'>首页</a></li>
+					<li class='hoverable clickable'><a href='/newhouse/'>新房</a></li>
+					<li class='hoverable clickable'><a href='javascript:void(0)'>二手房</a></li>
+					<li class='hoverable clickable'><a href='/news.html'>资讯</a></li>
+					<li class='hoverable clickable'><a href='#'>装修</a></li>
+					<li class='hoverable clickable'><i class='icon-thumb'>&nbsp;</i><a href='/groupon.html'>团购</a></li>
 				</ul>
 				<ul class='user'>
-					<li><a href='/login.html'>登录</a></li>
-					<li class='padding'><a>|</a></li>
-					<li><a href='/register.html'>注册</a></li>
-					<li><i class='icon-user'></i></li>
+					<li class='hoverable clickable'><a href='/login.html'>登录</a></li>
+					<li class='hoverable clickable padding'><a>|</a></li>
+					<li class='hoverable clickable'><a href='/register.html'>注册</a></li>
+					<li class='hoverable clickable'><i class='icon-user'></i></li>
 				</ul>
 			</div>
 		</div>
