--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -146,13 +146,13 @@
   	</div>
   	
   	<div class='right-300'>
-  		<div class='groupons block block-boundless block-bordered'>
+  		<div class='groupbuys block block-boundless block-bordered'>
   			<div class='bd'>
   			
   				<div class='numbered'>已报名： 73990 人</div>
   				<div class='signup'></div>
   				
-  				<div class='groupon'>
+  				<div class='groupbuy'>
   					<dl>
   						<dt>
   							铂金府邸
@@ -164,7 +164,7 @@
   						</dd>
   					</dl>
   				</div>
-  				<div class='groupon'>
+  				<div class='groupbuy'>
   					<dl>
   						<dt>
   							铂金府邸
@@ -176,7 +176,7 @@
   						</dd>
   					</dl>
   				</div>
-  				<div class='groupon'>
+  				<div class='groupbuy'>
   					<dl>
   						<dt>
   							铂金府邸
@@ -233,7 +233,7 @@
   
   <div class='section'>
   	
-  	<div class='m-groupons block block-boundless'>
+  	<div class='m-groupbuys block block-boundless'>
   	
   		<div class='hd clearfix'>
   			<h1>电商团购 <i class="icon-thumb-small">&nbsp;</i></h1>
@@ -249,7 +249,7 @@
   		
   		<div class='bd'>
   		
-  			<div class='groupon'>
+  			<div class='groupbuy'>
   			
   				<div><img src='/images/index/sample.jpg' /></div>
   				
@@ -281,7 +281,7 @@
   					</dd>
   				</dl>
   			</div>
-  			<div class='groupon'>
+  			<div class='groupbuy'>
   			
   				<div><img src='/images/index/sample.jpg' /></div>
   				
@@ -313,7 +313,7 @@
   					</dd>
   				</dl>
   			</div>
-  			<div class='groupon groupon-last'>
+  			<div class='groupbuy groupbuy-last'>
   			
   				<div><img src='/images/index/sample.jpg' /></div>
   				
@@ -345,7 +345,7 @@
   					</dd>
   				</dl>
   			</div>
-  			<div class='groupon'>
+  			<div class='groupbuy'>
   			
   				<div><img src='/images/index/sample.jpg' /></div>
   				
@@ -377,7 +377,7 @@
   					</dd>
   				</dl>
   			</div>
-  			<div class='groupon'>
+  			<div class='groupbuy'>
   			
   				<div><img src='/images/index/sample.jpg' /></div>
   				
@@ -409,7 +409,7 @@
   					</dd>
   				</dl>
   			</div>
-  			<div class='groupon groupon-last'>
+  			<div class='groupbuy groupbuy-last'>
   			
   				<div><img src='/images/index/sample.jpg' /></div>
   				
