--- a/static/css.css
+++ b/static/css.css
@@ -7,14 +7,15 @@ body { font-size: 12px;color #212121;line-height:1.5;font-family: microsoft yahe
 a{color:#212121;text-decoration:none;}
 a:hover { color:#ff6600;}
 
-h1 {font-size:1.8em;}
-h2 {font-size:1.5em;}
-h3 {font-size:1.25em;}
+h1 {font-size:22px;}
+h2 {font-size:18px;}
+h3 {font-size:16px;}
 
 
 .primary   {color:#62ab00;}
 .secondary {color:#528e00;}
-.featured   {color:#ff6600;}
+.featured  {color:#ff6600;}
+.quote     {color:#888;}
 
 .bold { font-weight:bold; }
 .deletion { text-decoration: line-through; color: #888;}
@@ -24,6 +25,12 @@ h3 {font-size:1.25em;}
 .f16 { font-size: 16px; }
 .f18 { font-size: 18px; }
 .f22 { font-size: 22px; }
+.f26 { font-size: 26px; }
+
+.l15 { line-height: 1.5em; }
+.l2  { line-height: 2em;   }
+.l25 { line-height: 2.5em; }
+.l3  { line-height: 3em;   }
 
 i { display:inline-block; vertical-align: middle; background-repeat: no-repeat; background-position: 0 0;}
 i.icon-thumb { vertical-align:baseline; background-image: url(./images/icons/thumb.png); width:40px; height:50px; }
@@ -38,12 +45,18 @@ i.icon-price-average  { background-image: url(./images/icons/price-average.png);
 i.icon-user-gray{ background-image: url(./images/icons/user-gray.png); width:20px; height:20px; }
 i.icon-more-vertical { background-image: url(./images/icons/more-vertical.png); width:23px; height:70px; }
 i.icon-close { background-image: url(./images/icons/close.png); width:13px; height:13px; }
+i.icon-square { background-image: url(./images/icons/square.png); width:9px; height:9px; }
+i.icon-square-gray { background-image: url(./images/icons/square-gray.png); width:9px; height:9px; }
+i.icon-arrow-left-large { background-image: url(./images/icons/arrow-left-large.png); width:60px; height:90px; }
+i.icon-arrow-right-large { background-image: url(./images/icons/arrow-right-large.png); width:60px; height:90px; }
 .submit {cursor:pointer;}
 
 .clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden}
 .clearfix{*+height:1%;}
 
 p{margin:0;}
+
+/* Layouts */
 
 .left-670-30 { float:left; width:670px;}
 .right-300 { margin-left:700px; width:300px;}
@@ -58,6 +71,10 @@ p{margin:0;}
 .left-238-12  { float: left; width: 238px; margin-right: 6px; padding-right: 6px; border-right: 1px dotted #ddd; }
 .left-238-12-last { margin-right: 0; padding-right: 0; border-right: none; }
 
+.left-400-30  {float:left; width: 400px;}
+.right-570  {margin-left:430px; width: 570px;}
+
+/* Framework */
 #top { font-size: 1.17em; height: 40px; line-height:40px; background-color:#f6f6f6; border-bottom: 1px solid #ddd;}
 #top a{ color: #999;}
 #top abbr{color:#ddd;}
@@ -92,8 +109,35 @@ p{margin:0;}
 
 #ft a{color:#666;text-decoration:none;}
 
+#brand {width:1000px;margin:0 auto;}
+#brand .logo {float:left; margin-top: 26px;width:400px;}
+#brand .logo img { vertical-align: top; }
+#brand .logo abbr { color: #ddd; font-weight:normal;}
+#brand .search {margin-left:440px;_margin-left:438px;}
+#brand .search .form{overflow:hidden;}
+#brand .search form {margin-top:2.5em; }
+#brand .search form input.submit {float:left;border:1px solid #62ab00;color:#fff;background:#62ab00 url('./images/search.png') right bottom no-repeat;;height:2.1em;line-height:2.1em;font-size:1.5em;padding: 0 3em 0 1em;_padding: 0 1.5em 0 0.5em;;font-weight:bold;}
+#brand .search form input.text {float:left;border:1px solid #62ab00;border-right:none;width:36em;height:2em;line-height:2em;padding:0.5em;}
+#brand .search .quick-search{line-height:2em;}
+#brand .search .quick-search ul li{ float:left; margin-right:0.5em; }
+
+
+#nav { height:50px;line-height:50px;background-color:#62ab00;}
+#nav .wrap {width:1000px;margin:0 auto;}
+
+#nav ul {display:block;}
+#nav ul.menu li{float:left;padding:0 2.5em;}
+#nav ul.menu li.active { background-color:#528e00; }
+#nav ul.menu li.hover { background-color:#589a00; }
+#nav ul.menu li a{color:#fff;font-size:1.5em; line-height:100%; vertical-align: middle;}
+
+#nav ul.user {display:block;float:right;height:50px;overflow:hidden;}
+#nav ul.user li{float:right;margin-right:0.5em;}
+#nav ul.user li a{color:#fff;font-size:1.25em;}
+
+/*Components*/
 .pager { line-height: 6em; font-size: 1.09em; }
-.pager li { display:inline-block; height: 2.25em; line-height: 2.25em; text-align: center; padding: 0 0.875em; border: 1px solid #ddd; }
+.pager li { display:inline-block; _zoom:1;_display:inline; height: 2.25em; line-height: 2.25em; text-align: center; padding: 0 0.875em; border: 1px solid #ddd; }
 .pager li.text{border:none !important;}
 .pager li.hover { color:#62ab00; border-color: #62ab00;}
 .pager li.active { background-color: #62ab00; color: #fff; }
@@ -128,35 +172,7 @@ p{margin:0;}
 .btn-featured {background-color: #ff6600;}
 .btn-featured:hover{background-color: #ff6600;}
 
-#brand {width:1000px;margin:0 auto;}
-#brand .logo {float:left; margin-top: 26px;width:400px;}
-#brand .logo img { vertical-align: top; }
-#brand .logo abbr { color: #ddd; font-weight:normal;}
-#brand .search {margin-left:440px;_margin-left:438px;}
-#brand .search .form{overflow:hidden;}
-#brand .search form {margin-top:2.5em; }
-#brand .search form input.submit {float:left;border:1px solid #62ab00;color:#fff;background:#62ab00 url('./images/search.png') right bottom no-repeat;;height:2.1em;line-height:2.1em;font-size:1.5em;padding: 0 3em 0 1em;_padding: 0 1.5em 0 0.5em;;font-weight:bold;}
-#brand .search form input.text {float:left;border:1px solid #62ab00;border-right:none;width:36em;height:2em;line-height:2em;padding:0.5em;}
-#brand .search .quick-search{line-height:2em;}
-#brand .search .quick-search ul li{ float:left; margin-right:0.5em; }
-
-
-#nav { height:50px;line-height:50px;background-color:#62ab00;}
-#nav .wrap {width:1000px;margin:0 auto;}
-
-#nav ul {display:block;}
-#nav ul.menu li{float:left;padding:0 2.5em;}
-#nav ul.menu li.active { background-color:#528e00; }
-#nav ul.menu li.hover { background-color:#589a00; }
-#nav ul.menu li a{color:#fff;font-size:1.5em; line-height:100%;}
-
-#nav ul.user {display:block;float:right;height:50px;overflow:hidden;}
-#nav ul.user li{float:right;margin-right:0.5em;}
-#nav ul.user li a{color:#fff;font-size:1.25em;}
-
-
 /*Pages*/
-
 
 #page-index .categories { float:left; width:240px;height:334px; overflow:hidden; }
 #page-index .categories .hd h1{font-weight:normal;}
@@ -187,16 +203,16 @@ p{margin:0;}
 #page-index .focus .bd ul li{ line-height: 2.5em; font-size:1.09em;}
 #page-index .focus .bd ul li.group { font-size: 1.34em;font-weight:bold; margin-top:1.75em; }
 
-#page-index .groupons .bd { position:relative; background: url(./images/index/groupon.png) no-repeat 0 0; padding: 170px 20px 0 20px;}
-#page-index .groupons .bd .numbered {color:#fff; font-size:1.25em; position:absolute; top:106px;left:80px;}
-#page-index .groupons .bd .signup { background: url(./images/index/signup.png) 0 0 no-repeat; width: 69px; height: 87px; position: absolute; right: 10px; top: 80px;}
-#page-index .groupons .bd .groupon {line-height:3em;}
-#page-index .groupons .bd .groupon dl dt { float:left; width:100px; font-size:1.5em;}
-#page-index .groupons .bd .groupon dl dd { margin-left: 110px; font-size:1.5em;}
-#page-index .groupons .bd .groupon dl dd button{ border: none; background-color: rgb(255, 204, 51); height:2em;line-height:2em;width:5em;}
-#page-index .groupons .bd .signup-by-phone { color: #62ab00; font-size:1.34em; line-height:45px;}
-#page-index .groupons .bd .signup-by-phone img{ vertical-align: bottom; }
-#page-index .groupons .bd .signup-by-phone .phone { font-size: 1.05em;}
+#page-index .groupbuys .bd { position:relative; background: url(./images/index/groupbuy.png) no-repeat 0 0; padding: 170px 20px 0 20px;}
+#page-index .groupbuys .bd .numbered {color:#fff; font-size:1.25em; position:absolute; top:106px;left:80px;}
+#page-index .groupbuys .bd .signup { background: url(./images/index/signup.png) 0 0 no-repeat; width: 69px; height: 87px; position: absolute; right: 10px; top: 80px;}
+#page-index .groupbuys .bd .groupbuy {line-height:3em;}
+#page-index .groupbuys .bd .groupbuy dl dt { float:left; width:100px; font-size:1.5em;}
+#page-index .groupbuys .bd .groupbuy dl dd { margin-left: 110px; font-size:1.5em;}
+#page-index .groupbuys .bd .groupbuy dl dd button{ border: none; background-color: rgb(255, 204, 51); height:2em;line-height:2em;width:5em;}
+#page-index .groupbuys .bd .signup-by-phone { color: #62ab00; font-size:1.34em; line-height:45px;}
+#page-index .groupbuys .bd .signup-by-phone img{ vertical-align: bottom; }
+#page-index .groupbuys .bd .signup-by-phone .phone { font-size: 1.05em;}
 
 #page-index .hykl { margin-top:20px; }
 
@@ -209,22 +225,22 @@ p{margin:0;}
 #page-index .datas .hd .more {font-size: 1.34em;margin-top: 6px;}
 #page-index .datas .bd { padding: 1em 0; line-height: 1.75em;}
 
-#page-index .m-groupons .hd { line-height:43px; border-top: 1px solid #62ab00; border-bottom: 1px solid #ddd;}
-#page-index .m-groupons .hd h1 { float:left;}
-#page-index .m-groupons .hd ul {float:left; margin-left: 1em;}
-#page-index .m-groupons .hd ul li {float:left; font-size: 1.34em;}
-#page-index .m-groupons .hd .more { font-size: 1.34em;}
-#page-index .m-groupons .bd { padding: 2em 0; }
-#page-index .m-groupons .bd .groupon { width: 310px; margin-right: 35px; float:left; margin-bottom: 2em;padding-bottom: 1em; border-bottom: 1px dotted #ddd;}
-#page-index .m-groupons .bd .groupon-last { margin-right: 0; } 
-#page-index .m-groupons .bd .groupon h2 { line-height: 2em; }
-#page-index .m-groupons .bd .groupon dl { margin-top: 1em; line-height:1.5em;}
-#page-index .m-groupons .bd .groupon dl dt { float: left;}
-#page-index .m-groupons .bd .groupon dl dd { float: right;}
-#page-index .m-groupons .bd .groupon .price { color: #ff6600; font-size:1.34em; font-weight:bold; }
-#page-index .m-groupons .bd .groupon .discount { color: #ff6600; font-size: 1.09em;} 
-#page-index .m-groupons .bd .groupon .shape { margin-top: 4px; background: url(/images/index/shape.png) 0 0 no-repeat; width: 72px; height: 23px; line-height: 23px; text-align: center; color: #fff; font-size: 1.09em; }
-#page-index .m-groupons .bd .groupon .phone { color: #62ab00; } 
+#page-index .m-groupbuys .hd { line-height:43px; border-top: 1px solid #62ab00; border-bottom: 1px solid #ddd;}
+#page-index .m-groupbuys .hd h1 { float:left;}
+#page-index .m-groupbuys .hd ul {float:left; margin-left: 1em;}
+#page-index .m-groupbuys .hd ul li {float:left; font-size: 1.34em;}
+#page-index .m-groupbuys .hd .more { font-size: 1.34em;}
+#page-index .m-groupbuys .bd { padding: 2em 0; }
+#page-index .m-groupbuys .bd .groupbuy { width: 310px; margin-right: 35px; float:left; margin-bottom: 2em;padding-bottom: 1em; border-bottom: 1px dotted #ddd;}
+#page-index .m-groupbuys .bd .groupbuy-last { margin-right: 0; } 
+#page-index .m-groupbuys .bd .groupbuy h2 { line-height: 2em; }
+#page-index .m-groupbuys .bd .groupbuy dl { margin-top: 1em; line-height:1.5em;}
+#page-index .m-groupbuys .bd .groupbuy dl dt { float: left;}
+#page-index .m-groupbuys .bd .groupbuy dl dd { float: right;}
+#page-index .m-groupbuys .bd .groupbuy .price { color: #ff6600; font-size:1.34em; font-weight:bold; }
+#page-index .m-groupbuys .bd .groupbuy .discount { color: #ff6600; font-size: 1.09em;} 
+#page-index .m-groupbuys .bd .groupbuy .shape { margin-top: 4px; background: url(/images/index/shape.png) 0 0 no-repeat; width: 72px; height: 23px; line-height: 23px; text-align: center; color: #fff; font-size: 1.09em; }
+#page-index .m-groupbuys .bd .groupbuy .phone { color: #62ab00; } 
 
 #page-index .leaders .hd { line-height: 3.75em; border-top: 1px solid #62ab00; border-bottom: 1px solid #ddd;}
 #page-index .leaders .bd { padding: 1.5em 0; }
@@ -302,11 +318,39 @@ p{margin:0;}
 #page-newhouse-list .block-list .item dl { overflow:hidden; margin-bottom: 0.5em; }
 #page-newhouse-list .block-list .item dl dt  {float:left;}
 #page-newhouse-list .block-list .item dl dd  {float:right;}
-#page-newhouse-list .block-list .item dt ul li  { text-align:center; color: #888; float: left; width: 6em; border: 1px solid #ddd; height: 1.75em; line-height: 1.75em; margin-right: 1em; }
+#page-newhouse-list .block-list .item dt ul li  { text-align:center; color: #888; background-color: #fff; float: left; width: 6em; border: 1px solid #ddd; height: 1.75em; line-height: 1.75em; margin-right: 1em; }
 #page-newhouse-list .block-list .item.hover { background-color:#f6f6f6; }
 
-/*Blocks*/
+#page-news-index .block-news-focus .hd { height: 3.75em; line-height: 4em; border-top: 1px solid #62ab00; border-bottom: 1px solid #ddd; }
 
+#page-groupbuy-index .block-groupbuy-jumbotron { position: relative; overflow: visible; }
+#page-groupbuy-index .block-groupbuy-jumbotron .icon-arrow-left-large{ position: absolute; left: -70px; top: 100px; }
+#page-groupbuy-index .block-groupbuy-jumbotron .icon-arrow-right-large{ position: absolute; right: -70px; top: 100px; }
+#page-groupbuy-index .block-groupbuy-jumbotron .bd { padding: 1.5em; border: 1px solid #ddd; }
+#page-groupbuy-index .block-groupbuy-jumbotron .bd .image { width: 660px; float:left; } 
+#page-groupbuy-index .block-groupbuy-jumbotron .bd .description { margin-left: 680px; }
+#page-groupbuy-index .block-groupbuy-jumbotron .bd .description h3 { margin-bottom: 1em; border-bottom: 1px dotted #ddd; padding-bottom: 1em; }
+#page-groupbuy-index .block-groupbuy-jumbotron .bd .description blockquote { color: #888; margin-bottom: 2em;}
+#page-groupbuy-index .block-groupbuy-jumbotron .ft { text-align: center; height: 3em; line-height: 3em;}
+#page-groupbuy-index .block-groupbuy-jumbotron .ft ul li { display:inline-block; _zoom:1;_display:inline; margin-right: 2em; }
+
+#page-groupbuy-index .block-groupbuy-new .hd { line-height: 3.75em; } 
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy { float:left; padding: 10px; border: 1px solid #ddd; width: 298px; margin-right: 20px; margin-bottom: 20px; } 
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy-last { margin-right: 0; } 
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy .image { position: relative; height: 155px; }
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy .image .mark  { display:none; height: 2em; line-height: 2em; color: #fff; position:absolute;bottom: 0; left: 0; right: 0;}
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy .image .price { font-size: 16px; height: 2em; line-height: 2em; color: #fff; position:absolute;bottom: 0; left: 0; right: 0; }
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy .image .mask  { font-size: 16px; height: 2em; line-height: 2em; background-color: #ff6600; color: #fff; position:absolute;bottom: 0; left: 0; right: 0; filter:alpha(opacity=50);-moz-opacity:0.5;-khtml-opacity: 0.5;opacity: 0.5; }
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy .description  {  }
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy .description dl dt { float: left;}
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy .description dl dd { float: right;}
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy .description .btn { font-size: 13px; }
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy.hover { border: 1px solid #ff6600;}
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy.hover .price { left:30px; top:60px;font-size: 26px; }
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy.hover .mark  { left:80px; top: 20px;font-size: 26px;display:block;}
+#page-groupbuy-index .block-groupbuy-new .bd .groupbuy.hover .mask  { left:0; top:0; height: 100%; width: 100%;}
+
+/*Blocks*/
 #block-newhouse-focus .hd { line-height: 3.75em; border-top: 1px solid #62ab00; border-bottom: 1px solid #ddd;}
 #block-newhouse-focus .bd { padding: 1.5em 0 0 0; }
 #block-newhouse-focus .bd ul li { line-height: 31px; }
@@ -348,12 +392,14 @@ p{margin:0;}
 #block-newhouse-quick-search dl dd { margin-left: 4em; }
 #block-newhouse-quick-search dl dd li a.active { color: #62ab00;}
 #block-newhouse-quick-search dl dd li { float: left; margin-right: 1em;}
+#block-newhouse-quick-search dl dd li a.selected { background: url(./images/icons/close-18x24.png) right center no-repeat; border: 1px solid #62ab00; height: 22px; line-height: 22px; padding-right: 20px; padding-left: 4px; display:inline-block; }
 #block-newhouse-quick-search .letters { margin-top: 1em; }
 #block-newhouse-quick-search .letters dt { background: url(/images/newhouse/letters.png) 0 0 no-repeat; color: #fff; width: 80px; text-align: center;}
 #block-newhouse-quick-search .letters dd { margin-left: 6.25em; }
 #block-newhouse-quick-search .letters li { margin-right: 3px; background-color: #62ab00; width: 2em; text-align: center;}
 #block-newhouse-quick-search .letters li a { color: #fff;}
 #block-newhouse-quick-search .letters li.hover { background-color: #333; }
+
 
 #block-buyer-guide .hd { border-bottom: 1px solid #62ab00; margin-bottom: 2em;}
 #block-buyer-guide .guide{ border: 1px solid #ddd; text-align:center; float: left; width: 120px; height: 140px; line-height: 2;}
